# indigets

./: .gitignore  CMakeLists.txt  README  indigets.pro
core/: abstractscale.cpp  abstractscale.hpp  abstractscaleengine.cpp  abstractscaleengine.hpp  circularscale.cpp  circularscale.hpp  core.pro  ellipse.cpp  ellipse.hpp  fixedscaleengine.cpp  fixedscaleengine.hpp  fixedtickengine.cpp  fixedtickengine.hpp  linearscale.cpp  linearscale.hpp  linearscaleengine.cpp  linearscaleengine.hpp  linearvaluemapper.cpp  linearvaluemapper.hpp  scalezone.cpp  scalezone.hpp  standardscalezone.cpp  standardscalezone.hpp  stepscaleengine.cpp  stepscaleengine.hpp  steptickengine.cpp  steptickengine.hpp  tickengine.cpp  tickengine.hpp  tools.cpp  tools.hpp  valuemapper.cpp
demo/: qmldir
demo/components/: CircularButton.qml  Field.qml  Gauge.qml  Label.qml  Led.qml  Marker.qml  Pointer.qml  Rotator.qml  Scaler.qml  SquareButton.qml  Tank.qml
demo/examples/: ValueChanger.qml  demo1.qml
demo_gui/: demo_gui.pro  qml.qrc
demo_gui/qml/: ValueChanger.qml  main.qml
demo_gui/src/: main.cpp
gics/: gics.pro  plugin.cpp  plugin.hpp  qmldir
gics/components/: CircularButton.qml  Field.qml  Gauge.qml  Label.qml  Led.qml  Marker.qml  Pointer.qml  Rotator.qml  Scaler.qml  SquareButton.qml  Tank.qml
gics/examples/: ValueChanger.qml  demo1.qml
indigets/: qmldir
indigets/components/: CircularButton.qml  Field.qml  Gauge.qml  Label.qml  Led.qml  Pointer.qml  SquareButton.qml
src/: CMakeLists.txt  abstractscale.cpp  abstractscale.hpp  circularscale.cpp  circularscale.hpp  ellipse.cpp  ellipse.hpp  fixedtickengine.cpp  fixedtickengine.hpp  linearscale.cpp  linearscale.hpp  linearvaluemapper.cpp  linearvaluemapper.hpp  plugin.cpp  plugin.hpp  scalezone.cpp  scalezone.hpp  src.pro  standardscalezone.cpp  standardscalezone.hpp  steptickengine.cpp  steptickengine.hpp  tickengine.cpp  timestamptickengine.cpp  timestamptickengine.hpp  tools.cpp  valuemapper.cpp  valuemapper.hpp
